--- a/package.json
+++ b/package.json
@@ -6,5 +6,12 @@
   "type": "module",
   "scripts": {
     "start": "yarn node ./src/index.js ...$@"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "minimist": "^1.2.8",
+    "openai": "^3.2.1",
+    "showdown": "^2.1.0",
+    "write-excel-file": "^1.4.25"
   }
 }
