--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "yarn node ./src/index.js ...$@"
+    "start": "yarn node ./src/index.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
